--- a/esmeCalendar/app/src/main/AndroidManifest.xml
+++ b/esmeCalendar/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".Main3Activity"></activity>
+        <activity android:name=".Main2Activity" />
         <activity
             android:name=".ChatActivity"
             android:label="@string/title_activity_chag"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
